--- a/css/styles.css
+++ b/css/styles.css
@@ -344,3 +344,108 @@ footer address {
     overflow: hidden;
     clip: rect(0 0 0 0);
 }
+
+@media screen and (min-width: 1024px) {
+    body {
+        row-gap: 0;
+        height: auto;
+        min-height: 100vh;
+    }
+
+    .main-header {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 1.5rem;
+    }
+    
+    #t-site {
+        white-space: nowrap;
+    }
+
+    #nav-principal {
+        background-color: #FFECD8;
+        padding: 0.5rem;
+        margin: 0;
+        
+        position: sticky;
+        top: 0;
+    }
+
+    #lista-categorias {
+        gap: 2rem;
+    }
+
+    .categoria {
+        background-color: transparent;
+        border: none;
+        border-radius: 6px;
+    
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .categoria a::after {
+        content: '';
+        display: inline-block;
+        width: 20px;
+        height: 20px;
+        background-image: url('../assets/icons/arrow.svg');
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+        margin-left: 0.5rem;
+    }
+
+    .categoria:hover a::after {
+        filter: brightness(0) invert(1);
+    }
+
+    main {
+        margin-top: 2.5rem;
+        margin-bottom: 4rem;
+
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-row: auto auto;
+        grid-template-areas: 
+            "destacados destacados"
+            "emprendedores canastas";
+    }
+
+    #destacados {
+        grid-area: destacados;
+    }
+
+    #emprendedores {
+        grid-area: emprendedores;
+    }
+
+    #canastas {
+        grid-area: canastas;
+    }
+
+    #lista-emprendedores, #lista-canastas {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        align-items: stretch;
+        background-color: #F2F7FF;
+        padding: 2rem;
+        border-radius: 6px;
+    }
+
+    #lista-emprendedores a {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    
+        gap: 0.25rem;
+        padding: 0.5rem 1rem;
+    }
+
+    #search-bar {
+        padding: 0.7rem;
+    }
+}
