--- a/src/styles/styles_catalogo.css
+++ b/src/styles/styles_catalogo.css
@@ -35,7 +35,7 @@
 }
 
 @media (min-width: 1024px) {
-  main {
+  #main-categoria {
     display: block;
     grid-template-columns: 1fr !important; 
   }
