--- a/src/styles/styles_cards.css
+++ b/src/styles/styles_cards.css
@@ -83,7 +83,7 @@
 .card a figure img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 /* Imágenes de canastas - object-fit: contain para mostrar imagen completa */
